# tetra-tools

./: .gitmodules  Cargo.toml  LICENSE  README.md  mino-board.js  pc-solver.html  worker.js
basic/: Cargo.toml
basic/benches/: supporting_queues.rs
basic/src/: board_list.rs  brokenboard.rs  gameplay.rs  lib.rs  piece_placer.rs  queue.rs
compute/: Cargo.toml
compute/src/: counter.rs  lib.rs  sharded_hashmap.rs
gomen/: .gitignore  Cargo.toml  build.sh  mino-board.js  pc-solver.html  serve.sh  solution-info.html  worker.js
gomen/src/: lib.rs  solver.rs
gpu/: placements.wgsl  plan.md
legal-boards/: Cargo.toml
legal-boards/src/: boardgraph.rs  main.rs
pkg/: gomen.js  gomen_bg.wasm  solver.js
precompute/: Cargo.toml
precompute/src/: boardgraph.rs  main.rs
precompute/src/boardgraph/: gamestate.rs  simple.rs  start_anywhere.rs
solver/: Cargo.toml
solver/src/: boardgraph.rs  broken.rs  lib.rs  main.rs  queue.rs  solver.rs
solver/src/boardgraph/: gamestate.rs  simple.rs
src/: boardgraph.rs  boardset.rs  brokenboard.rs  counter.rs  gameplay.rs  gamestategraph.rs  main.rs
src/boardgraph/: broken.rs  gamestate.rs  simple.rs
srs/: Cargo.toml  srs.json  test.rhai  tetrio.json
srs-4l/: Cargo.toml
srs-4l/src/: base64.rs  board_list.rs  brokenboard.rs  gameplay.rs  lib.rs  piece_placer.rs  vector.rs
srs/src/: lib.rs  main.rs  parse.rs  physics.rs  placements.rs
stacker/: Cargo.toml  prototype-client-do-not-bookmark.html  render.js  riir.html  srs.json  stacker.html
stacker/pkg/: stacker.js  stacker_bg.wasm
stacker/src/: game.rs  lib.rs  render.rs
strong-candidates/: Cargo.toml  mino-board.js  pc-solver.html
strong-candidates/src/: lib.rs
tetra/: Cargo.toml  field.py  pyproject.toml  repl.sh
tetra/python/tetra/: __init__.py  native.pyi
tetra/src/: interop.rs  lib.rs  types.rs
tetra/src/interop/: fumen.rs  pyo3.rs  srs_4l.rs
tetra/src/solver/: mod.rs
tetra/src/types/: field.rs  fumen.rs  piece.rs  queue_set.rs  solution.rs
webgl-board/: Atlas.psd  board.html  twgl
