[package]
name = "basic"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
bitvec = "0.22.3"
leb128 = "0.2.4"
smallvec = { version = "1.6.1", features = ["union"] }

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "supporting_queues"
harness = false
