[package]
name = "compute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.0"
crossbeam = "0.8.2"
num_cpus = "1.0"
parking_lot = "0.12.1"
rayon = "1.5.3"

srs-4l = { path = "../srs-4l" }
