[package]
name = "gomen"
version = "0.1.0"
authors = ["wirelyre"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
smallvec = { version = "1.6.1", features = ["union"] }
wasm-bindgen = "0.2.78"

srs-4l = { path = "../srs-4l" }
