[package]
name = "gomen"
version = "0.3.1"
authors = ["wirelyre"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.60"
fumen = "0.1.2"
miniserde = "0.1.27"
smallvec = { version = "1.9.0", features = ["union"] }
wasm-bindgen = "0.2.83"

srs-4l = { path = "../srs-4l" }
