[package]
name = "legal-boards"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
nohash = "0.2.0"
rayon = "1.5.3"
smallvec = { version = "1.9.0", features = ["union"] }

srs-4l = { path = "../srs-4l" }
compute = { path = "../compute" }
