[package]
name = "stacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.58"
miniserde = "0.1.24"
wasm-bindgen = "0.2.81"
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["wee_alloc"]
