[package]
name = "tetra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "native"
crate-type = ["cdylib"]

[dependencies]
bitvec = "1"
fumen = "0.1.2"
pyo3 = "0.19.0"
regex = "1.9"
smallvec = { version = "1.11", features = ["union"] }
strum = { version = "0.25.0", features = ["derive"] }

srs-4l = { path = "../srs-4l" }
